@@ -1,0 +1,189 @@
+# /etc/lilo.conf  -   systemwide LILO configuration (LILO 23)
+# details see in manpages: lilo(8) and lilo.conf(5)
+
+# +-------------------------------------------------------------+
+# |                        !! Reminder !!                       |
+# |                                                             |
+# | Don't forget to run 'lilo' after you make changes to this   |
+# | conffile or you have installed a new kernel.                |
+# +-------------------------------------------------------------+
+
+
+# #################### LILO global section ######################
+
+# With all newer systems (until year 2004) you can use the RAM
+# above 15 MB. This option allows the use of this range of RAM.
+#large-memory
+
+# With all newer systems you can boot from any partition on disks 
+# with more than 1024 cylinders. This option allows the use of 
+# partitions above 1024 cylinders.
+lba32
+
+# Specifies the boot device.  This is where Lilo installs its boot
+# block.  It can be either a partition, or the raw device, in which
+# case it installs in the MBR, and will overwrite the current MBR.
+# With newer kernel you should use the ID of the boot device, which
+# can be found here: /dev/disks/by-id/ata*.
+boot = /dev/sda
+
+# This option may be needed for some software RAID installs.
+#raid-extra-boot = mbr-only
+
+# Enable map compaction.  This tries to merge read requests for 
+# adjacent sectors into a single read request. This drastically 
+# reduces load time and keeps the map smaller.  Using 'compact' 
+# is especially recommended when booting from a floppy disk.  
+# It is disabled here by default because it doesn't always work.
+#compact
+
+# Set the verbose level for bootloader installation. Value range:
+# 0 to 5. Default value is 0.
+#verbose = 1
+
+# Specifies the location of the map file. Lilo creates the (sector) 
+# map file of direct sector addresses which are independent of any
+# filesystem.
+map = /boot/map
+
+# ---------------------------------------------------------------
+
+# Specifies the menu interface. You have the choice between:
+#   text: simple text menu with black background and white text
+#   menu: configurable text menu with background and text colors.
+#   bmp:  graphical menu with 640x480 bitmap background.
+install = menu
+
+# A) Customized boot message for choice 'text'.
+# For the simple text menu you can set an extra message in the 
+# created file. Its text will be displayed before boot prompt.
+#message = /boot/message.txt
+
+# B) Configuration of the scheme for choice 'menu'.
+# Use following coding: <text>:<highlight>:<border>:<title>
+# The first character of each part sets the text frontcolor, 
+# the second character of earch part sets the text backcolor,
+# an upper-case character sets bold face text (frontcolor).
+# i.g. 'menu-scheme=wm:rw:wm:Wm'. Possible colors: 
+# k=black, b=blue, g=green, c=cyan, r=red, m=magenta, y=yellow, w=white.
+menu-scheme = Wb:Yr:Wb:Wb
+#menu-title = " DESDEMONA Boot-Manager "
+
+# C) Configuration of the image for choice 'bmp'.
+# For the graphical menu you need a bitmap file, which needs a special
+# menu configuration in the file header (see: lilo -E). Ideally you 
+# use one of the delivered images of the lilo package.
+#   with 16 colors:    onlyblue, tuxlogo, inside
+#   with 256 colors:   coffee
+#   for Debian:        debianlilo, debian, debian-de
+#bitmap = /boot/tuxlogo.bmp
+
+# ---------------------------------------------------------------
+
+# Specifies the number of deciseconds (0.1 seconds) how long LILO 
+# should wait before booting the first image.  LILO doesn't wait if
+# 'delay' is omitted or set to zero. You do not see the defined menu.
+#delay = 20
+
+# Prompt to start one certain kernel from the displayed menu.
+# It is very recommeded to also set 'timeout'. Without timeout boot 
+# will not take place unless you hit return. Timeout is the number
+# of deciseconds (0.1 seconds) after there the default image will 
+# be started. With 'single-key' alias numbers for each menu line can
+# be used.
+prompt
+timeout = 100
+#single-key
+
+# ---------------------------------------------------------------
+
+# Specifying the VGA text mode that should be selected when booting.
+# The following values are recognized (case is ignored):
+#   vga=normal    80x25 text mode (default)
+#   vga=extended  80x50 text mode (abbreviated to 'ext')
+#   vga=ask       stop and ask for user input: choice of text mode
+#   vga=<mode>    use the corresponding text mode number. A list of  
+#                   available modes can be obtained by booting with  
+#                   vga=ask'  and then pressing [Enter].
+# Another way is the use of frame buffer mode. Then the kernel 
+# will switch from the normal vga text mode (80x25) to the frame
+# buffer mode (if frame buffer support is in the kernel):
+#   vga=0x314      800x600 @ 16 bit
+#   vga=0x317     1024x768 @ 16 bit
+#   vga=0x318     1024x768 @ 24 bit
+#vga = ask
+vga = normal
+#vga = 0x317
+
+# ---------------------------------------------------------------
+
+# Kernel command line options that apply to all installed images go
+# here.  See 'kernel-parameters.txt' in the Linux kernel 'Documentation'
+# directory. I.g. for start into 'init 5' write:  append="5"
+#append = ""
+ 
+# If you used a serial console to install Debian, this option should be
+# enabled by default.
+#serial = 0,9600
+
+# Set the image which should be started after delay or timeout.
+# If not set, the first defined image will be started.
+#default = Linux
+
+
+# ################### LILO per-image section ####################
+
+# Each image is configured with the linux kernel (=image) and
+# usually with the initrd file. Configure all GNU/Linux systems
+# on other partitions, too.
+
+# first example (default)
+image = /boot/vmlinuz-2.6.32-2-generic
+	label = "Linux"
+	root = /dev/sda2
+	read-only
+#	restricted
+#	alias = 1
+#	optional
+	initrd = /boot/initrd.img-2.6.32-2-generic
+
+# second example
+image = /boot/vmlinuz-2.6.32-1-generic
+	label = "LinuxOLD"
+	root = /dev/sdb1
+	read-only
+#	restricted
+#	alias = 2
+	optional
+	initrd = /boot/initrd.img-2.6.32-1-generic
+
+# third example
+image = /mnt/testsystem/boot/vmlinuz-2.6.26-1-custom
+	label = "Testsystem"
+	root = /dev/sda3
+	read-only
+#	restricted
+#	alias = 3
+	optional
+	initrd = /mnt/testsystem/boot/initrd.img-2.6.26-1-custom
+
+# other examples
+# Booting other OS on this machine must set with 'other'. Changing 
+# the device name on the `other' line to the partition of your other 
+# system.
+
+other = /dev/sda1
+	label = "Windows XP"
+#	restricted
+#	alias = 4
+
+other = /dev/sdb2
+	label = "GNU/Hurd"
+#	restricted
+#	alias = 5
+
+other = /dev/sdb3
+	label = "Windows 2003"
+#	restricted
+#	alias = 6
+	boot-as = 0x80
