@@ -30,6 +30,7 @@ Changes for version 23.1 (unreleased) - Joachim Wiedorn
         move images + config files into new 'image' directory.
     - Add new file TOOLS listing needed tools / packages.
     - Remove all unneeded stuff with old /boot/boot-* files.
+    - Add new example file for lilo.conf for newer lilo.
 
 
 Changes for version 23.0 (28-June-2010) - Joachim Wiedorn
